layout shift issue fix

--- a/src/Media.css
+++ b/src/Media.css
@@ -407,7 +407,7 @@
     flex-wrap: wrap;
     margin-top: 0;
     padding-top: 50px;
-    height: 360px;
+    min-height: 360px;
 }
   .clientBx {
     width: 47%;
